implemented sanctum on teams endpoints, bearer token can now be created on user dashboard
