# routes/web.php
@@ -1,6 +1,7 @@
 <?php
 
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\DashboardController;
 
 /*
 |--------------------------------------------------------------------------
@@ -15,10 +16,17 @@ use Illuminate\Support\Facades\Route;
 
 // Route::get('/', function () {
 //     return view('welcome');
-// });
+// // });
 
-Route::get('/', function () {
-    return view('dashboard');
-})->middleware(['auth'])->name('dashboard');
+// Route::get('/', function () {
+//     return view('dashboard');
+// })->middleware(['auth'])->name('dashboard');
+
+Route::middleware('auth')->group(function () {
+    Route::get('/', [DashboardController::class, 'dashboard'])->name('dashboard');
+    Route::get('/token/create', [DashboardController::class, 'showTokenForm'])->name('token.showForm');
+    Route::post('/token/create', [DashboardController::class, 'createToken'])->name('token.create');
+    Route::post('/token/delete/{token}', [DashboardController::class, 'deleteToken'])->name('token.delete');
+});
 
 require __DIR__.'/auth.php';
